mobileapp.css
/* ... */
body.scheme-dark .mma-forumng-posts-list-wrapper {
    background-color: #3a3a3a;
}

body.scheme-dark .mma-forumng-posts-list-wrapper .deleted-post .mma-forumng-post-info .mma-forumng-startedate,
body.scheme-dark .mma-forumng-posts-list-wrapper .deleted-post .mma-forumng-post-info .mma-forumng-startedby strong,
body.scheme-dark .deleted-post .mma-forumng-edit {
    color: #dedede;
}

body.scheme-dark .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-posts .collapse-post:before {
    background: linear-gradient(to bottom,rgba(98,98,98,0) calc(100% - 65px),#626262 calc(100% - 16px));
}

body.scheme-dark .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .unread-post .mma-forumng-posts .collapse-post:before {
    background: linear-gradient(to bottom,rgba(98,98,98,0) calc(100% - 65px),#626262 calc(100% - 20px));
}

body.scheme-dark .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-posts .collapse-post .custom-show-more {
    background-color: transparent;
    color: white;
}

@media (prefers-color-scheme: dark) {
    body.scheme-auto .mma-forumng-discussion .mma-forumng-discussion-subject,
    body.scheme-auto .mma-forumng-startedby,
    body.scheme-auto .mma-forumng-startedby strong,
    body.scheme-auto .mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-subject,
    body.scheme-auto .mma-forumng-discussion-list .mma-forumng-drafts .cell.c0,
    body.scheme-auto .mma-forumng-discussion-list .mma-forumng-drafts .mma-forumng-draft-heading,
    body.scheme-auto .mma-forumng-posts-list-wrapper .mma-forumng-posts-subject,
    body.scheme-auto .mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-startedate,
    body.scheme-auto .mma-forumng-boldtitle,
    body.scheme-auto .mma-forumng-posts-message strong,
    body.scheme-auto .deleted-post .mma-forumng-posts-message strong {
        color: white;
    }

    body.scheme-auto .mma-forumng-posts-list-wrapper {
        background-color: #3a3a3a;
    }

    body.scheme-auto .mma-forumng-posts-list-wrapper .deleted-post .mma-forumng-post-info .mma-forumng-startedate,
    body.scheme-auto .mma-forumng-posts-list-wrapper .deleted-post .mma-forumng-post-info .mma-forumng-startedby strong,
    body.scheme-auto .deleted-post .mma-forumng-edit {
        color: #dedede;
    }

    body.scheme-auto .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-posts .collapse-post:before {
        background: linear-gradient(to bottom, rgba(98, 98, 98, 0) calc(100% - 65px), #626262 calc(100% - 16px));
    }

    body.scheme-auto .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .unread-post .mma-forumng-posts .collapse-post:before {
        background: linear-gradient(to bottom, rgba(98, 98, 98, 0) calc(100% - 65px), #626262 calc(100% - 20px));
    }

    body.scheme-auto .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-posts .collapse-post .custom-show-more {
        background-color: transparent;
        color: white;
    }
}

/* Ionic5 and above */

.mma-forumng-discussion-listing .mma-forumng-discussion-group {
    margin-bottom: 16px;
}

.mma-forumng-discussion-listing #mod_forumg_add_discussion,
.mma-forumng-add-discussion .mma-forumng-group-button,
.mma-forumng-posts-list-wrapper #mma-forumng-form .mma-forumng-group-button,
.mma-forumng-posts-list-wrapper .mma-subreply-form .mma-forumng-group-button {
    margin: 13px 0;
}

.mma-forumng-add-discussion .mma-forumng-group-button ion-row {
    display: inline;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-subject,
.mma-forumng-discussion-list .mma-forumng-drafts .cell.c0 {
    font-size: 1rem;
}

.mma-forumng-discussion-list .mma-forumng-read-only core-format-text {
    display: contents;
}
.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons > span > span:not(:last-child) {
    margin-right: 5px;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons .mma-forumng-read-only {
    margin-left: 5px;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-icons {
    padding-left: 10px;
}

.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-last-post,
.mod_forumng ion-item .mma-forumng-boldtitle,
.mma-forumng-label-subject,
.mma-forumng-attachments ion-label,
.mma-forumng-label-message core-rich-text-editor,
.mma-forumng-label-message.item.item-label > ion-label.label-stacked {
    font-size: 0.85714rem;
}

.mma-forumng-label-subject ion-input[name="subject"] .label-text-wrapper.sc-ion-input-md,
.mma-forumng-label-subject ion-input[name="subject"] .label-text-wrapper.sc-ion-input-ios,
.mma-forumng-label-message ion-label.sc-ion-label-md-h,
.mma-forumng-label-message ion-label.sc-ion-label-ios-h {
    transform: scale(1);
}

.mma-forumng-discussion-list core-format-text[maxHeight].core-text-formatted.mma-forumng-discussion-introduction {
    margin-top: 13px;
}

.moodleapp-4 .mma-forumng-label-message ion-label,
.moodleapp-4 .sub-reply .mma-subreply-form .item-textarea.mma-forumng-label-message ion-label,
.moodleapp-4 .sub-reply .mma-subreply-form .item-textarea.mma-forumng-label-message core-rich-text-editor .core-rte-editor {
    padding: 0;
}
.mma-forumng-label-attachment {
    --min-height: 0;
    min-height: 0;
}
.mma-forumng-no-margin-bottom {
    margin-bottom: 0;
}

.mma-forumng-file-attachment .mma-forumng-attachments > ion-item {
    --padding-start: 0;
}
/* ... */

